[package]
name = "mozvet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
arg_enum_proc_macro = "0.3.2"
clap = { version = "4.0.10", features = ["derive"] }
enum-kinds = "0.5.1"
env_logger = "0.9.1"
format = "0.2.4"
git2 = { version = "0.15.0", features = ["vendored-libgit2"] }
itertools = "0.10.5"
log = "0.4.17"
octocrab = "0.17.0"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full", "tokio-macros"] }
toml = "0.5.9"
